# opencl_sobel

./: .gitignore  CMakeLists.txt
res/kernels/: sobel_kernel.cl
src/: CMakeLists.txt  main.cpp
